Bug 204081 - 'Coordinates' functionality is not fully implemented in the 'New contact' dialogue, Location tab.
Summary: 'Coordinates' functionality is not fully implemented in the 'New contact' dia...
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-16 21:42 UTC by Sabine Faure
Modified: 2009-08-28 22:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-08-16 21:42:29 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch KAddressBook.
- Go to File/New/New Contact.
- Type in a name and address in the Contact tab.
- Go to the Location tab.

There is a 'Coordinates' zone but nothing in it and no button.

Is this fully implemented ?
If it is, how can I make this work?

SVN REV 1011519
Comment 1 Tobias Koenig 2009-08-28 14:45:18 UTC
SVN commit 1016657 by tokoe:

Bring back the coordinates edit widget

BUG: 204081


 M  +3 -0      CMakeLists.txt  
 M  +6 -3      editor/contacteditorwidget.cpp  
 A             editor/data (directory)  
 A             editor/data/zone.tab  
 A             editor/geoeditwidget.cpp   [License: GPL (v2+)]
 A             editor/geoeditwidget.h   [License: GPL (v2+)]
 A             editor/pics (directory)  
 AM            editor/pics/world.jpg  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1016657
Comment 2 Sabine Faure 2009-08-28 22:44:14 UTC
This has been implemented now.
I can now select the Contacts' continent and city after clicking on the Change button.
Once done a red dot appears pointing out the selected city.

Trunk, Svn Rev 1016607