Bring back the coordinates edit widget

BUG: 204081

svn path=/trunk/KDE/kdepim/akonadi/contact/; revision=1016657